--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:src="@drawable/ic_log_reg_name"
+                android:src="@drawable/ic_log_reg_phone"
                 android:layout_centerInParent="true"/>
 
         <cn.xiaojs.xma.ui.widget.EditTextDel
@@ -51,7 +51,7 @@
                 android:imeOptions="actionNext"
                 android:inputType="phone"
                 android:layout_marginLeft="@dimen/px38"
-                android:textColorHint="@color/font_white"
+                android:textColorHint="@color/font_trans_white"
                 android:textColor="@color/font_white"
                 android:textSize="@dimen/font_28px"
                 android:layout_toRightOf="@+id/login_name_icon"
@@ -61,7 +61,8 @@
                 style="@style/DividerHorizontal"
                 android:layout_marginLeft="@dimen/px73"
                 android:layout_below="@+id/login_name"
-                android:background="@color/white"/>
+                android:background="@color/white"
+                android:alpha="0.4"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -71,6 +72,7 @@
             android:paddingLeft="@dimen/px57"
             android:paddingRight="@dimen/px57"
             android:layout_marginBottom="@dimen/px86"
+            android:layout_marginTop="@dimen/px18"
             android:layout_above="@+id/login_btn">
 
         <ImageView
@@ -96,7 +98,7 @@
                 android:layout_marginLeft="@dimen/px38"
                 android:layout_toRightOf="@+id/login_pwd_icon"
                 android:layout_toLeftOf="@+id/hide_show_pwd"
-                android:textColorHint="@color/font_white"
+                android:textColorHint="@color/font_trans_white"
                 android:textColor="@color/font_white"
                 android:textSize="@dimen/font_28px"
                 android:layout_marginRight="@dimen/px22"
@@ -114,15 +116,16 @@
                 style="@style/DividerHorizontal"
                 android:layout_below="@+id/login_pwd"
                 android:layout_marginLeft="@dimen/px73"
-                android:background="@color/white"/>
+                android:background="@color/white"
+                android:alpha="0.4"/>
     </RelativeLayout>
 
     <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/px40"
-            android:layout_marginRight="@dimen/px40"
+            android:layout_marginLeft="@dimen/px57"
+            android:layout_marginRight="@dimen/px57"
             android:layout_marginBottom="@dimen/px86"
             android:text="@string/login"
             style="@style/BigSubmitBtn"
