--- a/app/src/main/res/layout/layout_contact_choice_child.xml
+++ b/app/src/main/res/layout/layout_contact_choice_child.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<cn.xiaojs.xma.ui.widget.CheckableLinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,4 +33,4 @@
             android:textColor="@color/common_text"
             android:layout_marginLeft="10dp"
             />
-</LinearLayout>
+</cn.xiaojs.xma.ui.widget.CheckableLinearLayout>
