--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -18,6 +18,13 @@
                 android:layout_gravity="center">
         </cn.xiaojs.xma.ui.classroom.whiteboard.WhiteboardScrollerView>
 
+        <!--学生端用来绘制老师端发送来的白板命令-->
+        <cn.xiaojs.xma.ui.classroom.whiteboard.Whiteboard
+                android:id="@+id/stu_receive_wb"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
+
         <!--控制面板, 直播-->
         <include
                 android:id="@+id/main_panel"
