--- a/app/src/main/res/layout/layout_person_home_header.xml
+++ b/app/src/main/res/layout/layout_person_home_header.xml
@@ -16,6 +16,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
+        <ImageView
+                android:id="@+id/profile_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#77000000"/>
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -47,7 +53,7 @@
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/px10"
+                    android:layout_marginTop="@dimen/px15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -70,7 +76,7 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_28px"
                     android:text="疯狂是个儿童，在理智的花园里，做着美好的游戏"
-                    android:layout_marginTop="@dimen/px10"
+                    android:layout_marginTop="@dimen/px15"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -78,7 +84,7 @@
             <LinearLayout
                     android:layout_gravity="center_horizontal"
                     android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/px10"
+                    android:layout_marginTop="@dimen/px15"
                     android:layout_marginBottom="@dimen/px30"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
