--- a/app/src/main/res/layout/activity_share_scope.xml
+++ b/app/src/main/res/layout/activity_share_scope.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/lv"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-        />
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ListView
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    <include
+            android:id="@+id/v_empty"
+            layout="@layout/layout_list_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
+</merge>
+
