--- a/app/src/main/res/layout/layout_live_progress.xml
+++ b/app/src/main/res/layout/layout_live_progress.xml
@@ -3,15 +3,36 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
 
+    <cn.xiaojs.xma.ui.view.AnimationView
+            android:id="@+id/animation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px20"
+            android:background="@drawable/live_animation"/>
+
+    <TextView
+            android:id="@+id/live_progress_cur_state"
+            android:textColor="@color/font_orange"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px20"
+            android:text="上课中"
+            android:textSize="@dimen/font_26px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     <TextView
             android:id="@+id/live_progress_cur_time"
             android:textColor="@color/white"
             android:text="11:00:00"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px20"
             android:textSize="@dimen/font_22px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <ProgressBar
+            android:id="@+id/live_progress"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -29,6 +50,7 @@
             android:id="@+id/live_progress_total_time"
             android:text="22:11:00"
             android:textColor="@color/white"
+            android:layout_gravity="center_vertical"
             android:textSize="@dimen/font_22px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
