--- a/app/src/main/res/layout/activity_enroll_lesson.xml
+++ b/app/src/main/res/layout/activity_enroll_lesson.xml
@@ -4,6 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <include layout="@layout/layout_my_course_search"/>
+
+    <View
+            android:id="@+id/filter_line"
+            style="@style/DividerHorizontal"/>
+
     <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/enroll_lesson_list"
