--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -573,5 +573,5 @@
     <dimen name="px558">279.0dp</dimen>
     <dimen name="px559">279.5dp</dimen>
     <dimen name="px560">280.0dp</dimen>
-
+    <dimen name="px640">320.0dp</dimen>
 </resources>
