--- a/app/src/main/res/layout/layout_chat_my_speaker_item.xml
+++ b/app/src/main/res/layout/layout_chat_my_speaker_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:roundimg="http://schemas.android.com/apk/res-auto"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/px20"
                 android:paddingRight="@dimen/px20"
@@ -22,7 +22,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/portrait"
-            android:text="19:20"
             android:layout_marginRight="@dimen/px12"
             android:textSize="@dimen/font_24px"
             android:textColor="@color/font_black"/>
@@ -32,7 +31,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/time"
-            android:text="吴君如"
             android:textSize="@dimen/font_24px"
             android:layout_marginRight="@dimen/px15"
             android:textColor="@color/font_blue"/>
@@ -43,7 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/portrait"
             android:gravity="center_vertical"
-            android:text="国庆节要上课的哈"
             android:layout_below="@+id/time"
             android:textSize="@dimen/font_26px"
             android:layout_marginRight="@dimen/px5"
