--- a/app/src/main/res/layout/layout_classroom_talk.xml
+++ b/app/src/main/res/layout/layout_classroom_talk.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/chat"
-        android:layout_width="@dimen/px640"
+        android:id="@+id/talk"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:visibility="gone"
         android:orientation="horizontal">
 
     <RelativeLayout
+            android:id="@+id/talk_msg_layout"
             android:layout_width="@dimen/px560"
             android:layout_height="match_parent">
 
@@ -152,14 +153,14 @@
     </RelativeLayout>
 
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/px80"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_horizontal"
             android:background="@color/classroom_main_gray">
 
         <ListView
-                android:id="@+id/chat_simple_contact"
+                android:id="@+id/talk_simple_contact"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -167,11 +168,11 @@
                 android:listSelector="@android:color/transparent"/>
 
         <ImageView
-                android:id="@+id/open_contact"
+                android:id="@+id/toggle_msg_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/px70"
                 android:scaleType="center"
-                android:src="@drawable/cr_contact_book"/>
+                android:src="@drawable/cr_chat"/>
     </LinearLayout>
 
 
