教室_聊天逻辑修改

--- a/app/src/main/res/layout/layout_classroom_talk.xml
+++ b/app/src/main/res/layout/layout_classroom_talk.xml
@@ -168,7 +168,7 @@
                 android:listSelector="@android:color/transparent"/>
 
         <ImageView
-                android:id="@+id/toggle_msg_list_view"
+                android:id="@+id/close_msg_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/px70"
                 android:scaleType="center"
