--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -14,7 +14,7 @@
             android:orientation="horizontal">
 
         <cn.xiaojs.xma.ui.widget.MessageImageView
-                android:id="@+id/chat_btn"
+                android:id="@+id/enter_talk_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/px20"
